--- a/view/assets/styles/font-icon.css
+++ b/view/assets/styles/font-icon.css
@@ -39,7 +39,7 @@ i.arrows-rotate::before {
     font-family: "fa-pro";
     /* font-weight: 400; */
     font-style: normal;
-    font-size: 1.6rem;
+    /* font-size: 1.6rem; */
 }
 
 i.paintbrush {
@@ -260,4 +260,20 @@ i.trash-can::before {
 
 i.xmark-large::before {
     content: '\e59b';
+}
+
+i.chevron-right::before {
+    content: '\f054';
+    font-family: 'fa-pro';
+    font-size: 14px;
+    font-style: normal;
+}
+
+i.microsoft::before {
+    content: '\f3ca';
+    font-weight: 600;
+}
+
+i.link-slash::before {
+    content: '\f127';
 }
